[project]
name = "your-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.11.0",
    "fastapi>=0.120.1",
    "flagembedding",
    "llama-index>=0.14.6",
    "llama-index-embeddings-huggingface>=0.6.1",
    "pydantic>=2.12.3",
    "pymilvus>=2.6.2",
    "python-multipart>=0.0.20",
    "sentencepiece>=0.2.1",
    "torch",
    "uvicorn>=0.38.0",
]
