[project]
name = "your-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate",
    "bitsandbytes>=0.48.2",
    "fastapi",
    "flagembedding",
    "flash-attn>=2.8.3",
    "flashinfer-python>=0.5.2",
    "llama-index>=0.12.42",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-vector-stores-milvus>=0.8.7",
    "peft>=0.17.1",
    "pydantic",
    "pymilvus",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "python-multipart",
    "sentencepiece",
    "timm>=1.0.21",
    "torch>=2.8.0",
    "uvicorn",
    "vllm>=0.11.0",
]

[tool.uv.extra-build-dependencies]
"flash-attn" = ["torch"]